--- a/activities/1.1-basic-jupyter-notebook.ipynb
+++ b/activities/1.1-basic-jupyter-notebook.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f2b4273a",
    "metadata": {},
    "outputs": [
@@ -39,13 +39,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, JupyterLab!\n"
+      "Bellam Venkat Kalyan\n"
      ]
     }
    ],
    "source": [
     "# This is a Python code cell\n",
-    "print('Hello, JupyterLab!')"
+    "print('Bellam Venkat Kalyan')"
    ]
   },
   {
@@ -70,8 +70,9 @@
     "1. Double-click this cell to edit it.\n",
     "2. Add your name below using Markdown syntax:\n",
     "\n",
-    "### Your Name\n",
-    "John Doe\n",
+    "### B VEANKAT KALYAN\n",
+    "B VENKAT KALYAN\n",
+    "\n",
     "\n",
     "3. Press **Shift + Enter** to render the Markdown."
    ]
@@ -159,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
